SSRF-MetaDataV1,V2/compromise_ec2/security_group.tf

resource "aws_security_group" "securtiy_group" {
  name   =  format("webserver-%s",random_string.random_name.result)
  description = "Public HTTP + SSH"
  vpc_id = aws_vpc.stack-example-vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    protocol = "tcp"
    to_port = 65535
    cidr_blocks = ["0.0.0.0/0"]
  }

}
